Question: Add Question: Tutorial Style editor UI.  -Applied the media query for the 'Tutorial Style editor' page.  -Written conditions in media query to apply the different styling on different mobile devices.  -Handled the condition to show page content on different mobile devices in portrait and landscape mode.  -Applied the proper styling and changed the html code of the following elements.  -Open in the regular question editor link.  -Description text-area.  -Author elements.  -User rights drop-down.  -My library assignments name.  -'Select Library' button.  -'This question has' drop-down.  -'This part is' drop-down.  -'choices' drop-down.  -'Display those' drop-down.  -'Shuffle' drop-down.  -Tutorial table.  -Applied style for the following tutorial table elements.  -Correct check-box.  -Choice text-box and button.  -Feedback text-box and button.  -'Partial Credit' text-box.  -Hint drop-down and other elements.  -All hint text-box and Button.  -'Question text' text-area.  -'Save and Test' button.  -Completed and tested it on local, it was working fine.  -Checked it on iPhone 5, iPhone 6, iPhone 6 plus and iPad it was working fine.

--- a/web/css/imascore.css
+++ b/web/css/imascore.css
@@ -1427,3 +1427,21 @@ color:red;
 .add-video-video-player iframe {
     width: 100% !important;
 }
+.padding-left-two-em {
+    padding-left: 2em;
+}
+.padding-left-one-em {
+    padding-left: 1em;
+}
+.padding-top-one-em {
+    padding-top: 1em;
+}
+.padding-top-two-em {
+    padding-top: 2em;
+}
+.padding-bottom-one-em {
+    padding-bottom: 1em;
+}
+.margin-bottom-three-pt-five {
+    margin-bottom: 3.5em;
+}
